--- a/ComicDownloader/ComicDownloader.csproj
+++ b/ComicDownloader/ComicDownloader.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Engines\NetworkHelper.cs" />
     <Compile Include="Engines\StoryInfo.cs" />
     <Compile Include="Engines\TruyenTranhTuanDownloader.cs" />
+    <Compile Include="Engines\VechaiDownloader.cs" />
     <Compile Include="EXComboBox.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -106,6 +107,7 @@
     <Compile Include="Intro.Designer.cs">
       <DependentUpon>Intro.cs</DependentUpon>
     </Compile>
+    <Compile Include="LongOperation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerializationHelper.cs" />
@@ -404,11 +406,14 @@
     <Compile Include="XPTable\Sorting\ComparerBase.cs" />
     <Compile Include="XPTable\Sorting\DateTimeComparer.cs" />
     <Compile Include="XPTable\Sorting\HeapSorter.cs" />
+    <Compile Include="XPTable\Sorting\IComparerCollection.cs" />
     <Compile Include="XPTable\Sorting\ImageComparer.cs" />
     <Compile Include="XPTable\Sorting\InsertionSorter.cs" />
     <Compile Include="XPTable\Sorting\MergeSorter.cs" />
     <Compile Include="XPTable\Sorting\NumberComparer.cs" />
     <Compile Include="XPTable\Sorting\ShellSorter.cs" />
+    <Compile Include="XPTable\Sorting\SortColumn.cs" />
+    <Compile Include="XPTable\Sorting\SortColumnCollection.cs" />
     <Compile Include="XPTable\Sorting\SorterBase.cs" />
     <Compile Include="XPTable\Sorting\TextComparer.cs" />
     <Compile Include="XPTable\Themes\ButtonParts.cs" />
