--- a/ComicDownloader/ComicDownloader.csproj
+++ b/ComicDownloader/ComicDownloader.csproj
@@ -1076,6 +1076,19 @@
     <None Include="Resources\1364711392_media-play-pause-resume.png" />
     <None Include="Resources\1364712905_download.png" />
     <Content Include="Resources\1364714377_46796.ico" />
+    <None Include="Resources\1364717902_list-remove.png" />
+    <None Include="Resources\1364717999_delete.png" />
+    <None Include="Resources\1364718151_stopwatch_start.png" />
+    <None Include="Resources\1364718266_up.png" />
+    <None Include="Resources\1364718270_go-top.png" />
+    <None Include="Resources\1364718322_emblem-downloads.png" />
+    <None Include="Resources\1364718320_go-bottom.png" />
+    <None Include="Resources\1364718418_checked_checkbox.png" />
+    <None Include="Resources\1364718448_checkbox_unchecked.png" />
+    <None Include="Resources\1364718484_radio-unchecked.png" />
+    <None Include="Resources\1364718512_to_do_list_cheked_all.png" />
+    <None Include="Resources\1364718586_netvibes.png" />
+    <None Include="Resources\1364718804_start-here-ubuntustudio.png" />
     <Content Include="Resources\14747480-bang-comic-book-explosion.jpg" />
     <Content Include="3rd\itextsharp.dll" />
     <Content Include="3rd\Cx.Windows.Forms\MdiTabStrip.bmp" />
