--- a/ComicDownloader/ComicDownloader.csproj
+++ b/ComicDownloader/ComicDownloader.csproj
@@ -392,6 +392,12 @@
     <Compile Include="Forms\IView\UpdateLocations.Designer.cs">
       <DependentUpon>UpdateLocations.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\QueueCompleteForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\QueueCompleteForm.Designer.cs">
+      <DependentUpon>QueueCompleteForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\QueueDownloadForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -952,6 +958,9 @@
     <EmbeddedResource Include="Forms\IView\UpdateLocations.resx">
       <DependentUpon>UpdateLocations.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\QueueCompleteForm.resx">
+      <DependentUpon>QueueCompleteForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\QueueDownloadForm.resx">
       <DependentUpon>QueueDownloadForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -1089,6 +1098,11 @@
     <None Include="Resources\1364718512_to_do_list_cheked_all.png" />
     <None Include="Resources\1364718586_netvibes.png" />
     <None Include="Resources\1364718804_start-here-ubuntustudio.png" />
+    <None Include="Resources\1364729000_old-edit-find.png" />
+    <None Include="Resources\1364728988_file_extension_pdf.png" />
+    <None Include="Resources\1364729045_Gnome-Mail-Mark-Read-32.png" />
+    <None Include="Resources\1364729079_folderopen1.png" />
+    <None Include="Resources\1364738251_folder_explore.png" />
     <Content Include="Resources\14747480-bang-comic-book-explosion.jpg" />
     <Content Include="3rd\itextsharp.dll" />
     <Content Include="3rd\Cx.Windows.Forms\MdiTabStrip.bmp" />
