--- a/ComicDownloader/ComicDownloader.csproj
+++ b/ComicDownloader/ComicDownloader.csproj
@@ -194,6 +194,9 @@
     <Compile Include="Engines\18+\Manga16Downloader.cs" />
     <Compile Include="Engines\DownloaderAttribute.cs" />
     <Compile Include="Engines\En\BatotoDownloader.cs" />
+    <Compile Include="Engines\En\MangaWallDownloader.cs" />
+    <Compile Include="Engines\En\Manga4Downloader.cs" />
+    <Compile Include="Engines\En\MangaAccessDownloader.cs" />
     <Compile Include="Engines\En\MangaAnimeaDownloader.cs" />
     <Compile Include="Engines\En\EatMangaDownloader.cs" />
     <Compile Include="Engines\En\MangagoDownloader.cs" />
@@ -1161,6 +1164,9 @@
     <Folder Include="Engines\JP\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy "$(SolutionDir)ComicDownloader\bin\Release" "$(SolutionDir)Release" /y</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
