--- a/ComicDownloader/app.config
+++ b/ComicDownloader/app.config
@@ -1,3 +1,35 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="ElementSample.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+  </configSections>
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <targets>
+      <target name="logfile" xsi:type="File" fileName="log.txt" layout="${longdate} ${callsite} ${level} ${message}"/>
+      <target name="console" xsi:type="Console" />
+      <target xsi:type="EventLog"
+				 name="event"
+				 layout="${message}"
+				 source="MyProgram"
+				 eventId="555"
+				 log="Application"
+					 />
+    </targets>
+    <rules>
+      <logger name="*" minLevel="Error" writeTo="event" />
+      <logger name="*" minLevel="Info" writeTo="console" />
+      <logger name="*" minLevel="Info" writeTo="logfile"/>
+    </rules>
+
+  </nlog>
+  <userSettings>
+    <ElementSample.Properties.Settings>
+      <setting name="test" serializeAs="String">
+        <value>test</value>
+      </setting>
+    </ElementSample.Properties.Settings>
+  </userSettings>
 </configuration>
