--- a/ComicDownloader/ComicDownloader.csproj
+++ b/ComicDownloader/ComicDownloader.csproj
@@ -407,6 +407,12 @@
     <Compile Include="Forms\IView\UpdateLocations.Designer.cs">
       <DependentUpon>UpdateLocations.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\LastestChapterUpdateForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\LastestChapterUpdateForm.Designer.cs">
+      <DependentUpon>LastestChapterUpdateForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\QueueCompleteForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -980,6 +986,9 @@
     <EmbeddedResource Include="Forms\IView\UpdateLocations.resx">
       <DependentUpon>UpdateLocations.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\LastestChapterUpdateForm.resx">
+      <DependentUpon>LastestChapterUpdateForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\QueueCompleteForm.resx">
       <DependentUpon>QueueCompleteForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -1131,6 +1140,9 @@
     <None Include="Resources\1364729079_folderopen1.png" />
     <None Include="Resources\1364738251_folder_explore.png" />
     <None Include="Resources\1364755245_network-support.png" />
+    <None Include="Resources\1365100868_interact.png" />
+    <None Include="Resources\1365100861_interact.png" />
+    <None Include="Resources\1365103950_interact.png" />
     <Content Include="Resources\14747480-bang-comic-book-explosion.jpg" />
     <Content Include="3rd\itextsharp.dll" />
     <Content Include="3rd\Cx.Windows.Forms\MdiTabStrip.bmp" />
